<resources>
    <string name="app_name">Beckett Fitness</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotten_login_details">Forgotten login details?</string>
    <string name="or_Text">Or</string>
    <string name="sign_up">Sign up</string>
    <string name="add_meal_txt">Add Meal/Food Item</string>
    <string name="total_calories_consumed">Total Calories Consumed: %d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_exercise_level">Select Exercise Level</string>
    <string name="select_weight_loss_goal">Select Weight Loss Goal</string>
    <string name="gender_select">Select Gender</string>
</resources>