<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_login"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="21dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_pass"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <Button
        android:id="@+id/login"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="155dp"
        android:layout_height="25dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="11dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_pass" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        android:text="@string/or_Text"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <View
        android:id="@+id/view1"
        android:layout_width="175dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="30dp"
        android:background="#A4A0AA"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <View
        android:id="@+id/view"
        android:layout_width="175dp"
        android:layout_height="1dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="#A4A0AA"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="213dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="Leeds Beckett Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        app:srcCompat="@drawable/beck_logo"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>
